--- a/cutm-skillbridge/backend/package.json
+++ b/cutm-skillbridge/backend/package.json
@@ -9,22 +9,23 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "cutm-skillbridge": "file:..",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.8.0",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1"
+    "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
