--- a/cutm-skillbridge/package.json
+++ b/cutm-skillbridge/package.json
@@ -9,31 +9,32 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/forms": "^21.1.2",
-    "@angular/compiler": "^21.1.0",
-    "@angular/core": "^21.1.0",
-    "@angular/platform-browser": "^21.1.0",
-    "@angular/platform-browser-dynamic": "^21.1.0",
-    "@angular/common": "^21.1.0",
-    "@angular/router": "^21.1.2",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
-    "d3": "^7.9.0",
-    "tailwindcss": "latest",
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.2",
+    "@angular/platform-browser": "^21.1.0",
+    "@angular/platform-browser-dynamic": "^21.1.0",
+    "@angular/router": "^21.1.2",
     "axios": "^1.6.0",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "qrcode": "^1.5.3",
-    "pdfkit": "^0.13.0",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "socket.io": "^4.6.1"
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.3",
+    "rxjs": "^7.8.2",
+    "socket.io": "^4.6.1",
+    "tailwindcss": "latest",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
