--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^8.0.1",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
     "rxjs": "^7.8.2",
     "socket.io": "^4.6.1",
-    "tailwindcss": "latest",
-    "xlsx": "^0.18.5"
+    "tailwindcss": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
